crates/libtest2/tests/ui/should_panic_attribute_typo.stderr
error: unknown attribute 'should_panic(expect = "something")'
 --> tests/ui/should_panic_attribute_typo.rs:4:1
  |
4 | #[libtest2::test]
  | ^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `$crate::_private::test_parse` which comes from the expansion of the attribute macro `libtest2::test` (in Nightly builds, run with -Z macro-backtrace for more info)
