crates/libtest2/tests/ui/should_panic_attribute_typo.rs
#[libtest2::main]
fn main() {}

#[libtest2::test]
#[should_panic(expect = "something")]
fn test(_: &libtest2::TestContext) {
    panic!("the correct attribute is 'expected = \"...\"'");
}
